crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// An opaque handle to a device's count of how long the network has been silent.
//
// Release it with [`pamoja_lorawan_backoff_free`].
typedef struct PamojaLorawanBackoff PamojaLorawanBackoff;
// What a back-off says to do with one uplink.
//
// Each field is `1` for yes and `0` for no.
typedef struct {
  // Set the ADRACKReq bit, asking the network to answer.
  uint8_t request_ack;
  // Go back to the default transmit power before sending. Only TS001-1.0.4 takes this
  // step.
  uint8_t restore_power;
  // Step the data rate down by the region's back-off table before sending.
  uint8_t lower_data_rate;
  // Re-enable the default channels and set the repetition count back to one before
  // sending. Only TS001-1.0.4 takes this step.
  uint8_t restore_channels;
} PamojaLorawanBackoffStep;
// Starts a back-off count from zero.
//
// # Arguments
//
// * `version` - [`PAMOJA_LORAWAN_VERSION_1_0_3`] or [`PAMOJA_LORAWAN_VERSION_1_0_4`], the
//   revision whose steps to follow.
// * `limit` - how many unanswered uplinks before the device starts asking, usually
//   [`PAMOJA_LORAWAN_ADR_ACK_LIMIT`].
// * `delay` - how many more before its first step, and between each step after that,
//   usually [`PAMOJA_LORAWAN_ADR_ACK_DELAY`]. Zero is taken as one.
// * `out_backoff` - receives the count.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_backoff` set to a handle the caller must
// release with [`pamoja_lorawan_backoff_free`].
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `out_backoff` is null or `version` names no
// revision.
//
// # Safety
//
// `out_backoff` must point to a writable `*mut PamojaLorawanBackoff`.
PamojaStatus pamoja_lorawan_backoff_new(uint8_t version,
                                        uint32_t limit,
                                        uint32_t delay,
                                        PamojaLorawanBackoff **out_backoff);
// Counts one new uplink, and says what to do before sending it.
//
// Call it once per uplink the frame counter moves for. A repeat of the same uplink does
// not count.
//
// # Arguments
//
// * `backoff` - the count.
// * `default_data_rate` - `1` if the device is already at its default data rate, the
//   slowest it uses, so there is no lower rate to step to.
// * `out_step` - receives what to do.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null.
//
// # Safety
//
// `backoff` must be a live handle from [`pamoja_lorawan_backoff_new`], and `out_step` must
// point to a writable [`PamojaLorawanBackoffStep`].
PamojaStatus pamoja_lorawan_backoff_uplink(PamojaLorawanBackoff *backoff,
                                           uint8_t default_data_rate,
                                           PamojaLorawanBackoffStep *out_step);
// Counts a Class A downlink, which proves the network still hears the device and resets
// the count.
//
// # Arguments
//
// * `backoff` - the count.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if `backoff` is null.
//
// # Safety
//
// `backoff` must be a live handle from [`pamoja_lorawan_backoff_new`], or null.
PamojaStatus pamoja_lorawan_backoff_downlink(PamojaLorawanBackoff *backoff);
// Returns how many uplinks have gone unanswered.
//
// # Returns
//
// The counter, or 0 if `backoff` is null.
//
// # Safety
//
// `backoff` must be a live handle from [`pamoja_lorawan_backoff_new`], or null.
uint32_t pamoja_lorawan_backoff_counter(const PamojaLorawanBackoff *backoff);
// Returns the revision whose steps a count follows.
//
// # Returns
//
// [`PAMOJA_LORAWAN_VERSION_1_0_3`] or [`PAMOJA_LORAWAN_VERSION_1_0_4`], or 0 if `backoff`
// is null.
//
// # Safety
//
// `backoff` must be a live handle from [`pamoja_lorawan_backoff_new`], or null.
uint8_t pamoja_lorawan_backoff_version(const PamojaLorawanBackoff *backoff);
// Releases a back-off handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `backoff` must be a handle from [`pamoja_lorawan_backoff_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_lorawan_backoff_free(PamojaLorawanBackoff *backoff);
// Builds a type 0 channel list from frequencies.
//
// # Arguments
//
// * `frequencies_hz` - the frequencies in hertz, with `0` for a slot left unused.
// * `len` - how many `frequencies_hz` points at, which must be
//   [`PAMOJA_LORAWAN_CFLIST_FREQUENCIES`].
// * `out_cflist` - receives the sixteen bytes.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null or `len` is not five, and
// [`PamojaStatus::Codec`] if a frequency is not a whole number of hundreds of hertz, lies
// below the 100 MHz RP002-1.0.5 reserves, or does not fit three bytes.
//
// # Safety
//
// `frequencies_hz` must point to `len` readable values and `out_cflist` to at least
// [`PAMOJA_LORAWAN_CFLIST_LEN`] writable bytes.
PamojaStatus pamoja_lorawan_cflist_from_frequencies(const uint32_t *frequencies_hz,
                                                    uintptr_t len,
                                                    uint8_t *out_cflist);
// Builds a type 1 channel list from channel mask groups.
//
// # Arguments
//
// * `masks` - the groups, where bit *n* of group *g* enables channel `g * 16 + n`.
// * `len` - how many `masks` points at, which must be
//   [`PAMOJA_LORAWAN_CFLIST_MASK_GROUPS`].
// * `out_cflist` - receives the sixteen bytes.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null or `len` is not six.
//
// # Safety
//
// `masks` must point to `len` readable values and `out_cflist` to at least
// [`PAMOJA_LORAWAN_CFLIST_LEN`] writable bytes.
PamojaStatus pamoja_lorawan_cflist_from_channel_masks(const uint16_t *masks,
                                                      uintptr_t len,
                                                      uint8_t *out_cflist);
// Reads which form a channel list takes.
//
// # Arguments
//
// * `cflist` - the sixteen bytes.
// * `cflist_len` - their length, which must be [`PAMOJA_LORAWAN_CFLIST_LEN`].
// * `out_type` - receives the CFListType byte: [`PAMOJA_LORAWAN_CFLIST_TYPE_FREQUENCIES`],
//   [`PAMOJA_LORAWAN_CFLIST_TYPE_CHANNEL_MASKS`], or a type the regional parameters
//   reserve, which a device ignores.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null or the list is not
// sixteen bytes.
//
// # Safety
//
// `cflist` must point to `cflist_len` readable bytes and `out_type` to a writable byte.
PamojaStatus pamoja_lorawan_cflist_type(const uint8_t *cflist,
                                        uintptr_t cflist_len,
                                        uint8_t *out_type);
// Reads the frequencies out of a type 0 channel list.
//
// # Arguments
//
// * `cflist` - the sixteen bytes.
// * `cflist_len` - their length, which must be [`PAMOJA_LORAWAN_CFLIST_LEN`].
// * `out_frequencies_hz` - receives the frequencies in hertz, `0` for an unused slot.
// * `len` - room at `out_frequencies_hz`, which must be
//   [`PAMOJA_LORAWAN_CFLIST_FREQUENCIES`].
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null, a length is wrong, or
// the list is not type 0.
//
// # Safety
//
// `cflist` must point to `cflist_len` readable bytes and `out_frequencies_hz` to `len`
// writable values.
PamojaStatus pamoja_lorawan_cflist_frequencies(const uint8_t *cflist,
                                               uintptr_t cflist_len,
                                               uint32_t *out_frequencies_hz,
                                               uintptr_t len);
// Reads the mask groups out of a type 1 channel list.
//
// # Arguments
//
// * `cflist` - the sixteen bytes.
// * `cflist_len` - their length, which must be [`PAMOJA_LORAWAN_CFLIST_LEN`].
// * `out_masks` - receives the groups.
// * `len` - room at `out_masks`, which must be [`PAMOJA_LORAWAN_CFLIST_MASK_GROUPS`].
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null, a length is wrong, or
// the list is not type 1.
//
// # Safety
//
// `cflist` must point to `cflist_len` readable bytes and `out_masks` to `len` writable
// values.
PamojaStatus pamoja_lorawan_cflist_channel_masks(const uint8_t *cflist,
                                                 uintptr_t cflist_len,
                                                 uint16_t *out_masks,
                                                 uintptr_t len);
// Reports whether a type 1 channel list enables a channel.
//
// # Arguments
//
// * `cflist` - the sixteen bytes.
// * `cflist_len` - their length, which must be [`PAMOJA_LORAWAN_CFLIST_LEN`].
// * `channel` - the channel number, `group * 16 + bit`.
// * `out_enabled` - receives `1` if its bit is set and `0` if not.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null, the list is not sixteen
// bytes or not type 1, or the channel is past the 96 the groups cover.
//
// # Safety
//
// `cflist` must point to `cflist_len` readable bytes and `out_enabled` to a writable byte.
PamojaStatus pamoja_lorawan_cflist_enables(const uint8_t *cflist,
                                           uintptr_t cflist_len,
                                           uint8_t channel,
                                           uint8_t *out_enabled);